[tool.poetry]
name = "pyc"
version = "0.1.0"
description = ""
authors = ["Netanel Haber <netanel@cardlatch.com>"]

[tool.poetry.dependencies]
python = "^3.10"
ipython = "^8.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
